<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_smartphone"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_smartphone" />
        <item
            android:id="@+id/nav_keypadphone"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_keypadphone" />
        <item
            android:id="@+id/nav_mobileaccessories"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_mobileaccessories" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contactus" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_share" />
    </group>
</menu>