<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#53C6AE"
    android:weightSum="7"
    tools:context=".SplashActivity">

    <TextView
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/mText2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:id="@+id/mText3"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:gravity="center"/>

    <TextView
        android:layout_weight="3"
        android:gravity="center"
        android:layout_width="match_parent"
        android:text="@string/main_text"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_height="0dp"
        android:id="@+id/mText1"
        />


</LinearLayout>